plugins/de.cau.cs.kieler.krep.evalbench.base/src-gen/de/cau/cs/kieler/krep/evalbench/program/kep/parser/kepParser.java
/*
 * KIELER - Kiel Integrated Environment for Layout Eclipse RichClient
 *
 * http://www.informatik.uni-kiel.de/rtsys/kieler/
 * 
 * Copyright 2009 by
 * + Christian-Albrechts-University of Kiel
 *   + Department of Computer Science
 *     + Real-Time and Embedded Systems Group
 * 
 * This code is provided under the terms of the Eclipse Public License (EPL).
 * See the file epl-v10.html for the license text.
 */
// $ANTLR 3.1.1 kep.g 2009-03-27 15:25:59

package de.cau.cs.kieler.krep.evalbench.program.kep.parser;

import java.util.LinkedList;
import java.util.HashMap;

import org.antlr.runtime.*;

import de.cau.cs.kieler.krep.evalbench.comm.Signal;
import de.cau.cs.kieler.krep.evalbench.program.kep.*;
import de.cau.cs.kieler.krep.evalbench.program.kep.Constants.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class kepParser extends Parser {
    public static final String[] tokenNames = new String[] { "<invalid>",
            "<EOR>", "<DOWN>", "<UP>", "ID", "NUMBER", "Letter", "Digit",
            "WHITESPACE", "COMMENT", "'EMIT'", "'_TICKLEN'", "','", "'#'",
            "':'", "'INPUT'", "'OUTPUT'", "'INPUTV'", "'OUTPUTV'", "'SIGNAL'",
            "'SIGNALV'", "'VAR'", "'NOTHING'", "'GOTO'", "'CALL'", "'RETURN'",
            "'PRESENT'", "'AWAIT'", "'PAUSE'", "'AWAITI'", "'HALT'",
            "'CAWAITS'", "'CAWAIT'", "'CAWAITI'", "'CAWAITE'", "'ABORT'",
            "'ABORTI'", "'WABORT'", "'WABORTI'", "'SUSPEND'", "'SUSPENDI'",
            "'SETV'", "'SUSTAIN'", "'PAR'", "'PARE'", "'PRIO'", "'JOIN'",
            "'LABORT'", "'LABORTI'", "'LWABORT'", "'LWABORTI'", "'TABORT'",
            "'TABORTI'", "'TWABORT'", "'TWABORTI'", "'JC'", "'JNC'", "'CLRC'",
            "'SETC'", "'SR'", "'SRC'", "'SL'", "'SLC'", "'NOTR'", "'LOAD'",
            "'ADD'", "'ADDC'", "'SUB'", "'SUBC'", "'MUL'", "'ANDR'", "'ORR'",
            "'XORR'", "'CMP'", "'CMPS'", "'DEF32'", "'EXIT'", "'PRE'", "'('",
            "')'", "'?'" };
    public static final int T__68 = 68;
    public static final int T__69 = 69;
    public static final int T__66 = 66;
    public static final int T__67 = 67;
    public static final int T__64 = 64;
    public static final int T__29 = 29;
    public static final int T__65 = 65;
    public static final int T__28 = 28;
    public static final int T__62 = 62;
    public static final int T__27 = 27;
    public static final int T__63 = 63;
    public static final int T__26 = 26;
    public static final int T__25 = 25;
    public static final int T__24 = 24;
    public static final int T__23 = 23;
    public static final int T__22 = 22;
    public static final int T__21 = 21;
    public static final int T__20 = 20;
    public static final int ID = 4;
    public static final int T__61 = 61;
    public static final int T__60 = 60;
    public static final int EOF = -1;
    public static final int T__55 = 55;
    public static final int T__56 = 56;
    public static final int T__19 = 19;
    public static final int T__57 = 57;
    public static final int T__58 = 58;
    public static final int T__51 = 51;
    public static final int T__16 = 16;
    public static final int T__52 = 52;
    public static final int T__15 = 15;
    public static final int T__53 = 53;
    public static final int T__18 = 18;
    public static final int T__54 = 54;
    public static final int T__17 = 17;
    public static final int T__12 = 12;
    public static final int T__11 = 11;
    public static final int T__14 = 14;
    public static final int T__13 = 13;
    public static final int T__59 = 59;
    public static final int T__10 = 10;
    public static final int COMMENT = 9;
    public static final int T__50 = 50;
    public static final int T__42 = 42;
    public static final int T__43 = 43;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int T__80 = 80;
    public static final int T__46 = 46;
    public static final int T__47 = 47;
    public static final int T__44 = 44;
    public static final int T__45 = 45;
    public static final int T__48 = 48;
    public static final int T__49 = 49;
    public static final int NUMBER = 5;
    public static final int WHITESPACE = 8;
    public static final int Digit = 7;
    public static final int T__30 = 30;
    public static final int T__31 = 31;
    public static final int T__32 = 32;
    public static final int T__71 = 71;
    public static final int T__33 = 33;
    public static final int T__72 = 72;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__70 = 70;
    public static final int T__36 = 36;
    public static final int T__37 = 37;
    public static final int T__38 = 38;
    public static final int T__39 = 39;
    public static final int T__76 = 76;
    public static final int T__75 = 75;
    public static final int T__74 = 74;
    public static final int Letter = 6;
    public static final int T__73 = 73;
    public static final int T__79 = 79;
    public static final int T__78 = 78;
    public static final int T__77 = 77;

    // delegates
    // delegators

    public kepParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public kepParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    public String[] getTokenNames() {
        return kepParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "kep.g";
    }

    LinkedList<Instruction> instructions = new LinkedList<Instruction>();

    LinkedList<Signal> inputs = new LinkedList<Signal>();
    LinkedList<Signal> outputs = new LinkedList<Signal>();
    LinkedList<Signal> locals = new LinkedList<Signal>();

    int signalIndex = 1; // 0=ticklen;

    LinkedList<String> labels = new LinkedList<String>();

    private String errorMsg = new String();
    private boolean error = false;

    private HashMap<String, Integer> signalID = new HashMap<String, Integer>();

    private void addSignal(Scope scope, boolean valued, String name) {
        Signal s = new Signal(name, false, valued ? 0 : null, signalIndex);
        if (scope == Scope.INPUT) {
            inputs.add(s);
        } else if (scope == Scope.OUTPUT) {
            outputs.add(s);
        } else {
            locals.add(s);
        }
        if (signalID.get(name) == null) {
            signalID.put(name, signalIndex);
        }
        signalIndex++;
    }

    public void emitErrorMessage(String msg) {
        errorMsg += msg + "\n";
        error = true;
    }

    public String getErrorMsg() {
        return errorMsg;
    }

    public boolean getError() {
        return error;
    }

    public LinkedList<Signal> getInputs() {
        return inputs;
    }

    public LinkedList<Signal> getOutputs() {
        return outputs;
    }

    public LinkedList<Signal> getLocals() {
        return locals;
    }

    public LinkedList<Instruction> getInstructions() {
        return instructions;
    }

    private void unsupported(String keyword) {
        System.err.println(keyword + " not supported");
    }

    private enum Scope {
        INPUT, OUTPUT, LOCAL;
    }

    // $ANTLR start "program"
    // kep.g:89:1: program : ( io_expr )* 'EMIT' '_TICKLEN' ',' '#' d= num ( kst
    // )* ;
    public final void program() throws RecognitionException {
        Integer d = null;

        try {
            // kep.g:89:10: ( ( io_expr )* 'EMIT' '_TICKLEN' ',' '#' d= num (
            // kst )* )
            // kep.g:89:13: ( io_expr )* 'EMIT' '_TICKLEN' ',' '#' d= num ( kst
            // )*
            {
                // kep.g:89:13: ( io_expr )*
                loop1: do {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);

                    if (((LA1_0 >= 15 && LA1_0 <= 21))) {
                        alt1 = 1;
                    }

                    switch (alt1) {
                    case 1:
                        // kep.g:89:13: io_expr
                    {
                        pushFollow(FOLLOW_io_expr_in_program34);
                        io_expr();

                        state._fsp--;

                    }
                        break;

                    default:
                        break loop1;
                    }
                } while (true);

                match(input, 10, FOLLOW_10_in_program53);
                match(input, 11, FOLLOW_11_in_program55);
                match(input, 12, FOLLOW_12_in_program57);
                match(input, 13, FOLLOW_13_in_program60);
                pushFollow(FOLLOW_num_in_program64);
                d = num();

                state._fsp--;

                instructions.add(new Emit(new KepSignal("_TICKLEN", null, 0,
                        1 + d), null));
                // kep.g:92:13: ( kst )*
                loop2: do {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);

                    if ((LA2_0 == ID || LA2_0 == 10
                            || (LA2_0 >= 19 && LA2_0 <= 20) || (LA2_0 >= 22 && LA2_0 <= 76))) {
                        alt2 = 1;
                    }

                    switch (alt2) {
                    case 1:
                        // kep.g:92:13: kst
                    {
                        pushFollow(FOLLOW_kst_in_program96);
                        kst();

                        state._fsp--;

                    }
                        break;

                    default:
                        break loop2;
                    }
                } while (true);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return;
    }

    // $ANTLR end "program"

    // $ANTLR start "kst"
    // kep.g:95:1: kst : (i= kasm_st | l= ID ':' );
    public final void kst() throws RecognitionException {
        Token l = null;
        Instruction i = null;

        try {
            // kep.g:95:5: (i= kasm_st | l= ID ':' )
            int alt3 = 2;
            int LA3_0 = input.LA(1);

            if ((LA3_0 == 10 || (LA3_0 >= 19 && LA3_0 <= 20) || (LA3_0 >= 22 && LA3_0 <= 76))) {
                alt3 = 1;
            } else if ((LA3_0 == ID)) {
                alt3 = 2;
            } else {
                NoViableAltException nvae = new NoViableAltException("", 3, 0,
                        input);

                throw nvae;
            }
            switch (alt3) {
            case 1:
                // kep.g:95:8: i= kasm_st
            {
                pushFollow(FOLLOW_kasm_st_in_kst115);
                i = kasm_st();

                state._fsp--;

                if (i != null) {
                    i.setLabels(labels);
                    labels.clear();
                    instructions.add(i);
                } else {
                    System.err.println("unknown expression");
                }
                ;

            }
                break;
            case 2:
                // kep.g:103:8: l= ID ':'
            {
                l = (Token) match(input, ID, FOLLOW_ID_in_kst128);
                match(input, 14, FOLLOW_14_in_kst130);
                labels.add((l != null ? l.getText() : null));

            }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return;
    }

    // $ANTLR end "kst"

    // $ANTLR start "io_expr"
    // kep.g:106:1: io_expr : ( 'INPUT' sig_list[Scope.INPUT, false] | 'OUTPUT'
    // sig_list[Scope.OUTPUT, false] | 'INPUTV' sig_list[Scope.INPUT, true] |
    // 'OUTPUTV' sig_list[Scope.OUTPUT,true] | 'SIGNAL' sig_list[Scope.LOCAL,
    // false] | 'SIGNALV' sig_list[Scope.LOCAL,true] | 'VAR' var_list );
    public final void io_expr() throws RecognitionException {
        try {
            // kep.g:106:10: ( 'INPUT' sig_list[Scope.INPUT, false] | 'OUTPUT'
            // sig_list[Scope.OUTPUT, false] | 'INPUTV' sig_list[Scope.INPUT,
            // true] | 'OUTPUTV' sig_list[Scope.OUTPUT,true] | 'SIGNAL'
            // sig_list[Scope.LOCAL, false] | 'SIGNALV'
            // sig_list[Scope.LOCAL,true] | 'VAR' var_list )
            int alt4 = 7;
            switch (input.LA(1)) {
            case 15: {
                alt4 = 1;
            }
                break;
            case 16: {
                alt4 = 2;
            }
                break;
            case 17: {
                alt4 = 3;
            }
                break;
            case 18: {
                alt4 = 4;
            }
                break;
            case 19: {
                alt4 = 5;
            }
                break;
            case 20: {
                alt4 = 6;
            }
                break;
            case 21: {
                alt4 = 7;
            }
                break;
            default:
                NoViableAltException nvae = new NoViableAltException("", 4, 0,
                        input);

                throw nvae;
            }

            switch (alt4) {
            case 1:
                // kep.g:106:12: 'INPUT' sig_list[Scope.INPUT, false]
            {
                match(input, 15, FOLLOW_15_in_io_expr152);
                pushFollow(FOLLOW_sig_list_in_io_expr156);
                sig_list(Scope.INPUT, false);

                state._fsp--;

            }
                break;
            case 2:
                // kep.g:107:12: 'OUTPUT' sig_list[Scope.OUTPUT, false]
            {
                match(input, 16, FOLLOW_16_in_io_expr170);
                pushFollow(FOLLOW_sig_list_in_io_expr173);
                sig_list(Scope.OUTPUT, false);

                state._fsp--;

            }
                break;
            case 3:
                // kep.g:108:12: 'INPUTV' sig_list[Scope.INPUT, true]
            {
                match(input, 17, FOLLOW_17_in_io_expr187);
                pushFollow(FOLLOW_sig_list_in_io_expr190);
                sig_list(Scope.INPUT, true);

                state._fsp--;

            }
                break;
            case 4:
                // kep.g:109:12: 'OUTPUTV' sig_list[Scope.OUTPUT,true]
            {
                match(input, 18, FOLLOW_18_in_io_expr204);
                pushFollow(FOLLOW_sig_list_in_io_expr206);
                sig_list(Scope.OUTPUT, true);

                state._fsp--;

            }
                break;
            case 5:
                // kep.g:110:12: 'SIGNAL' sig_list[Scope.LOCAL, false]
            {
                match(input, 19, FOLLOW_19_in_io_expr220);
                pushFollow(FOLLOW_sig_list_in_io_expr223);
                sig_list(Scope.LOCAL, false);

                state._fsp--;

            }
                break;
            case 6:
                // kep.g:111:12: 'SIGNALV' sig_list[Scope.LOCAL,true]
            {
                match(input, 20, FOLLOW_20_in_io_expr237);
                pushFollow(FOLLOW_sig_list_in_io_expr239);
                sig_list(Scope.LOCAL, true);

                state._fsp--;

            }
                break;
            case 7:
                // kep.g:112:12: 'VAR' var_list
            {
                match(input, 21, FOLLOW_21_in_io_expr253);
                pushFollow(FOLLOW_var_list_in_io_expr255);
                var_list();

                state._fsp--;

                unsupported("var");

            }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return;
    }

    // $ANTLR end "io_expr"

    // $ANTLR start "sig_list"
    // kep.g:115:1: sig_list[Scope scope, boolean valued] : id0= signal_id ( ','
    // id1= signal_id )* ;
    public final void sig_list(Scope scope, boolean valued)
            throws RecognitionException {
        kepParser.signal_id_return id0 = null;

        kepParser.signal_id_return id1 = null;

        try {
            // kep.g:116:9: (id0= signal_id ( ',' id1= signal_id )* )
            // kep.g:116:12: id0= signal_id ( ',' id1= signal_id )*
            {
                pushFollow(FOLLOW_signal_id_in_sig_list297);
                id0 = signal_id();

                state._fsp--;

                addSignal(scope, valued, (id0 != null ? input.toString(
                        id0.start, id0.stop) : null));
                // kep.g:117:12: ( ',' id1= signal_id )*
                loop5: do {
                    int alt5 = 2;
                    int LA5_0 = input.LA(1);

                    if ((LA5_0 == 12)) {
                        alt5 = 1;
                    }

                    switch (alt5) {
                    case 1:
                        // kep.g:117:13: ',' id1= signal_id
                    {
                        match(input, 12, FOLLOW_12_in_sig_list314);
                        pushFollow(FOLLOW_signal_id_in_sig_list318);
                        id1 = signal_id();

                        state._fsp--;

                        addSignal(scope, valued, (id1 != null ? input.toString(
                                id1.start, id1.stop) : null));

                    }
                        break;

                    default:
                        break loop5;
                    }
                } while (true);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return;
    }

    // $ANTLR end "sig_list"

    // $ANTLR start "var_list"
    // kep.g:120:1: var_list : variable ( ',' variable )* ;
    public final void var_list() throws RecognitionException {
        try {
            // kep.g:120:10: ( variable ( ',' variable )* )
            // kep.g:120:13: variable ( ',' variable )*
            {
                pushFollow(FOLLOW_variable_in_var_list342);
                variable();

                state._fsp--;

                // kep.g:120:23: ( ',' variable )*
                loop6: do {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if ((LA6_0 == 12)) {
                        alt6 = 1;
                    }

                    switch (alt6) {
                    case 1:
                        // kep.g:120:24: ',' variable
                    {
                        match(input, 12, FOLLOW_12_in_var_list346);
                        pushFollow(FOLLOW_variable_in_var_list348);
                        variable();

                        state._fsp--;

                    }
                        break;

                    default:
                        break loop6;
                    }
                } while (true);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return;
    }

    // $ANTLR end "var_list"

    // $ANTLR start "kasm_st"
    // kep.g:123:1: kasm_st returns [Instruction instr] : ( 'NOTHING' | 'GOTO'
    // a= addr | 'CALL' addr | 'RETURN' | 'PRESENT' s= signal ',' a2= addr |
    // 'AWAIT' s1= signal | 'PAUSE' | 'AWAITI' s2= signal | 'HALT' | 'CAWAITS' |
    // 'CAWAIT' signal ',' addr | 'CAWAITI' signal ',' addr | 'CAWAITE' addr |
    // 'ABORT' s3= signal ',' a3= addr | 'ABORTI' s4= signal ',' a4= addr |
    // 'WABORT' s5= signal ',' a5= addr | 'WABORTI' s6= signal ',' a6= addr |
    // 'SUSPEND' s7= signal ',' a7= addr | 'SUSPENDI' s8= signal ',' a8= addr |
    // 'SIGNAL' s9= signal | 'SIGNALV' s10= signal | 'EMIT' sexpr= sig_expr |
    // 'SETV' sig_expr | 'SUSTAIN' sexpr= sig_expr | 'PAR' p0= num ',' l0= addr
    // ',' t0= num | 'PARE' l1= addr ',' p1= num | 'PRIO' p2= num ',' t2= num |
    // 'PRIO' p3= num | 'JOIN' p4= num | 'LABORT' signal ',' addr | 'LABORTI'
    // signal ',' addr | 'LWABORT' signal ',' addr | 'LWABORTI' signal ',' addr
    // | 'TABORT' signal ',' addr | 'TABORTI' signal ',' addr | 'TWABORT' signal
    // ',' addr | 'TWABORTI' signal ',' addr | 'JC' addr | 'JNC' addr | 'CLRC' |
    // 'SETC' | 'SR' reg | 'SRC' reg | 'SL' reg | 'SLC' reg | 'NOTR' reg |
    // 'LOAD' r= reg_expr | 'ADD' reg_expr | 'ADDC' reg_expr | 'SUB' reg_expr |
    // 'SUBC' reg_expr | 'MUL' reg_expr | 'ANDR' reg_expr | 'ORR' reg_expr |
    // 'XORR' reg_expr | 'CMP' reg_expr | 'CMPS' reg_expr | 'DEF32' '#' data |
    // 'EXIT' a= addr ',' addr );
    public final Instruction kasm_st() throws RecognitionException {
        Instruction instr = null;

        Label a = null;

        KepSignal s = null;

        Label a2 = null;

        KepSignal s1 = null;

        KepSignal s2 = null;

        KepSignal s3 = null;

        Label a3 = null;

        KepSignal s4 = null;

        Label a4 = null;

        KepSignal s5 = null;

        Label a5 = null;

        KepSignal s6 = null;

        Label a6 = null;

        KepSignal s7 = null;

        Label a7 = null;

        KepSignal s8 = null;

        Label a8 = null;

        KepSignal s9 = null;

        KepSignal s10 = null;

        KepSignal sexpr = null;

        Integer p0 = null;

        Label l0 = null;

        Integer t0 = null;

        Label l1 = null;

        Integer p1 = null;

        Integer p2 = null;

        Integer t2 = null;

        Integer p3 = null;

        Integer p4 = null;

        kepParser.reg_expr_return r = null;
